syntax = "proto3";

package customer;

import "utils.proto";

message SignUpCustomerRequest {
    string fullName = 1;
    string email = 2;
    string password = 3;
    string address = 4;
    string dateOfBirth = 5;
}

message SignUpCustomerResponse {
    string message = 1;
    bool success = 2;
}

message SignInCustomerResponse{
     Customer customer = 1;
     bool success = 2;
     string token = 3;
}

message OrderBookRequest {
    string bookId = 1;
    // string customerId = 2;
    int32 quantity = 3;
}

message OrderBookResponse {
    string message = 1;
    Order order = 2;
}

message CancelBookOrderRequest{
    string orderId = 1;
}

message CancelBookOrderResponse{
    string message = 1;
    bool success = 2;
}

message GetOrderDetailsRequest{
    string orderId = 1;
}

message GetOrderDetailsResponse{
    Order order = 1;
}

message InitiateBookPaymentRequest{

    string orderId = 1;
}

message InitiateBookPaymentResponse{
        bool success = 1;
        string message = 2;
        string bookName = 3;
        string customerName = 4;
        double price = 5;
        int32 quantity = 6;
}

service CustomerService {
    rpc SignUpCustomer(SignUpCustomerRequest) returns (SignUpCustomerResponse) {};
    rpc SignInCustomer(SignInRequest) returns (SignInCustomerResponse) {};
    rpc OrderBook(OrderBookRequest) returns (OrderBookResponse) {};
    rpc CancelBookOrder(CancelBookOrderRequest) returns (CancelBookOrderResponse) {};
    rpc GetOrderDetails(GetOrderDetailsRequest) returns (GetOrderDetailsResponse) {};
    rpc InitiateBookPayment(InitiateBookPaymentRequest) returns (InitiateBookPaymentResponse) {};
}